docs: adjust security warnings to accurately reflect mitigated behaviors (stash vs clean, opt-in preview) following previous security patches